--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,12 @@
             <version>1.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>26.0-jre</version>
+        </dependency>
+
     </dependencies>
 
     <build>
